--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
+    "declaration": true,
     "esModuleInterop": true,
-    "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["ES2020", "DOM"],
     "module": "CommonJS",
     "moduleResolution": "node",
-    "noEmit": true,
-    "noErrorTruncation": true,
-    "noUncheckedIndexedAccess": true,
-    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "useUnknownInCatchVariables": false,
+    "sourceMap": true,
     "strict": true,
-    "target": "es2020"
-  }
+    "target": "es2020",
+    "typeRoots": ["node_modules/@types", "packages/snap/types"]
+  },
+  "exclude": ["**/__snapshots__/**"]
 }
