--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opact-snap",
+  "name": "root",
   "version": "0.1.0",
   "private": true,
   "description": "",
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "yarn workspaces foreach --parallel --topological --verbose run build",
+    "build:snap-api": "turbo run build --filter=snap-api...",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:eslint": "eslint . --cache --ext js,ts",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
