--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.5.2",
   "description": "A Metamask Snap for managing and using Opact.",
   "proposedName": "Opact Wallet Snap",
   "repository": {
@@ -7,12 +7,12 @@
     "url": "https://github.com/Galactica-corp/galactica-snap.git"
   },
   "source": {
-    "shasum": "6OWPtTvD0y2TuaC8kfi0E+ANyFm7ddQOUKaHyWJpxxY=",
+    "shasum": "NcxI1ehI0ik8XK5lBQWTffEENKxAJnklOb/TI2OVUQs=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
         "iconPath": "images/icon.svg",
-        "packageName": "snap",
+        "packageName": "@galactica-net/snap-beta",
         "registry": "https://registry.npmjs.org/"
       }
     }
