--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@galactica-net/snap-beta",
-  "version": "0.5.2",
+  "name": "snap",
+  "version": "0.0.1",
   "description": "A Metamask Snap for managing and using zkCertificates on the Galactica network.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Galactica-corp/galactica-snap.git"
+    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "license": "(BUSL-1.1 OR MIT-0 OR Apache-2.0)",
   "main": "src/index.ts",
