--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -27,10 +27,14 @@
   },
   "dependencies": {
     "@metamask/providers": "^14.0.0",
+    "autoprefixer": "^10.4.16",
+    "gatsby-plugin-postcss": "^6.12.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^12.2.0",
