--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -30,8 +30,10 @@
     "test:unit": "mocha --colors -r ts-node/register \"test/*.test.ts\""
   },
   "dependencies": {
+    "@metamask/eth-sig-util": "^7.0.0",
     "circomlibjs": "hsg88/circomlibjs#ffjavascrip.0.1.0",
     "ethereum-cryptography": "^2.1.2",
+    "js-base64": "^3.7.5",
     "opact-sdk": "^1.0.88",
     "snarkjs": "https://github.com/Galactica-corp/snarkjs-ses.git#v0.5-snap",
     "tweetnacl": "^1.0.3"
