--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "EvWpzCjfaX7eGeIO77QYLBWePkjgJ2gFakS9BMLjgcs=",
+    "shasum": "KU8aoFYH+HE/blh7YASnqV/Z/QNY8+lqkOel3x2pvBI=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -22,6 +22,7 @@
       "dapps": true,
       "snaps": false
     },
+    "endowment:network-access": {},
     "endowment:ethereum-provider": {},
     "endowment:webassembly": {},
     "snap_notify": {},
